# fteikpy-jax

./: CONTRIBUTING.rst  README.rst  pyproject.toml
.github/workflows/: ci.yml  doc.yml
fteikpy/: __init__.py
fteikpy/_jax/: __init__.py  eikonal3d.py  misfit.py
tests/: test_jax_backend.py
