[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fteikpy"
dynamic = ["version"]
description = "Accurate Eikonal solver for Python"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
authors = [{name = "Keurfon Luu", email = "keurfonluu@outlook.com"}]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "importlib_metadata",
  "numpy",
  "numba",
]

[project.optional-dependencies]
full = [
  "scipy",
  "meshio>=4.0",
]
doc = [
  "matplotlib",
  "sphinx",
  "sphinx-argparse",
  "sphinx-gallery",
  "pydata-sphinx-theme",
  "sphinxcontrib-bibtex",
  "pybtex-apa-style",
]

[project.urls]
Homepage = "https://github.com/keurfonluu/fteikpy"
Code = "https://github.com/keurfonluu/fteikpy"
Issues = "https://github.com/keurfonluu/fteikpy/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "fteikpy.__about__.__version__"}

# uv project management
[tool.uv]
preview = true
dev-dependencies = [
  "black",
  "build",
  "docformatter",
  "invoke",
  "isort",
  "pytest",
  "pytest-cov",
  "twine",
  # ci
  "codecov",
]
